docs-archive/apache-airflow-providers-google/22.2.0/_sources/_api/airflow/providers/google/cloud/operators/bigquery/index.rst.txt
airflow.providers.google.cloud.operators.bigquery
=================================================

.. py:module:: airflow.providers.google.cloud.operators.bigquery

.. autoapi-nested-parse::

   This module contains Google BigQuery operators.



Attributes
----------

.. autoapisummary::

   airflow.providers.google.cloud.operators.bigquery.BIGQUERY_JOB_DETAILS_LINK_FMT
   airflow.providers.google.cloud.operators.bigquery.LABEL_REGEX


Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.operators.bigquery.BigQueryUIColors
   airflow.providers.google.cloud.operators.bigquery.IfExistAction
   airflow.providers.google.cloud.operators.bigquery.BigQueryCheckOperator
   airflow.providers.google.cloud.operators.bigquery.BigQueryValueCheckOperator
   airflow.providers.google.cloud.operators.bigquery.BigQueryIntervalCheckOperator
   airflow.providers.google.cloud.operators.bigquery.BigQueryColumnCheckOperator
   airflow.providers.google.cloud.operators.bigquery.BigQueryTableCheckOperator
   airflow.providers.google.cloud.operators.bigquery.BigQueryGetDataOperator
   airflow.providers.google.cloud.operators.bigquery.BigQueryCreateTableOperator
   airflow.providers.google.cloud.operators.bigquery.BigQueryDeleteDatasetOperator
   airflow.providers.google.cloud.operators.bigquery.BigQueryCreateEmptyDatasetOperator
   airflow.providers.google.cloud.operators.bigquery.BigQueryGetDatasetOperator
   airflow.providers.google.cloud.operators.bigquery.BigQueryGetDatasetTablesOperator
   airflow.providers.google.cloud.operators.bigquery.BigQueryUpdateTableOperator
   airflow.providers.google.cloud.operators.bigquery.BigQueryUpdateDatasetOperator
   airflow.providers.google.cloud.operators.bigquery.BigQueryDeleteTableOperator
   airflow.providers.google.cloud.operators.bigquery.BigQueryUpsertTableOperator
   airflow.providers.google.cloud.operators.bigquery.BigQueryUpdateTableSchemaOperator
   airflow.providers.google.cloud.operators.bigquery.BigQueryInsertJobOperator
   airflow.providers.google.cloud.operators.bigquery.BigQueryCreateRoutineOperator
   airflow.providers.google.cloud.operators.bigquery.BigQueryUpdateRoutineOperator
   airflow.providers.google.cloud.operators.bigquery.BigQueryDeleteRoutineOperator
   airflow.providers.google.cloud.operators.bigquery.BigQueryGetRoutineOperator
   airflow.providers.google.cloud.operators.bigquery.BigQueryListRoutinesOperator


Module Contents
---------------

.. py:data:: BIGQUERY_JOB_DETAILS_LINK_FMT
   :value: 'https://console.cloud.google.com/bigquery?j={job_id}'


.. py:data:: LABEL_REGEX

.. py:class:: BigQueryUIColors

   Bases: :py:obj:`enum.Enum`


   Hex colors for BigQuery operators.


   .. py:attribute:: CHECK
      :value: '#C0D7FF'



   .. py:attribute:: QUERY
      :value: '#A1BBFF'



   .. py:attribute:: TABLE
      :value: '#81A0FF'



   .. py:attribute:: DATASET
      :value: '#5F86FF'



.. py:class:: IfExistAction

   Bases: :py:obj:`enum.Enum`


   Action to take if the resource exist.


   .. py:attribute:: IGNORE
      :value: 'ignore'



   .. py:attribute:: LOG
      :value: 'log'



   .. py:attribute:: FAIL
      :value: 'fail'



   .. py:attribute:: SKIP
      :value: 'skip'



.. py:class:: BigQueryCheckOperator(*, sql, gcp_conn_id = 'google_cloud_default', project_id = PROVIDE_PROJECT_ID, use_legacy_sql = True, location = None, impersonation_chain = None, labels = None, encryption_configuration = None, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), poll_interval = 4.0, query_params = None, **kwargs)

   Bases: :py:obj:`_BigQueryDbHookMixin`, :py:obj:`airflow.providers.common.sql.operators.sql.SQLCheckOperator`, :py:obj:`_BigQueryOperatorsEncryptionConfigurationMixin`


   Performs checks against BigQuery.

   This operator expects a SQL query that returns a single row. Each value on
   that row is evaluated using a Python ``bool`` cast. If any of the values
   is falsy, the check errors out.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:BigQueryCheckOperator`

   Note that Python bool casting evals the following as *False*:

   * ``False``
   * ``0``
   * Empty string (``""``)
   * Empty list (``[]``)
   * Empty dictionary or set (``{}``)

   Given a query like ``SELECT COUNT(*) FROM foo``, it will fail only if
   the count equals to zero. You can craft much more complex query that could,
   for instance, check that the table has the same number of rows as the source
   table upstream, or that the count of today's partition is greater than
   yesterday's partition, or that a set of metrics are less than three standard
   deviation for the 7-day average.

   This operator can be used as a data quality check in your pipeline.
   Depending on where you put it in your Dag, you have the choice to stop the
   critical path, preventing from publishing dubious data, or on the side and
   receive email alerts without stopping the progress of the Dag.

   :param sql: SQL to execute.
   :param gcp_conn_id: Connection ID for Google Cloud.
   :param use_legacy_sql: Whether to use legacy SQL (true) or standard SQL (false).
   :param location: The geographic location of the job. See details at:
       https://cloud.google.com/bigquery/docs/locations#specifying_your_location
   :param impersonation_chain: Optional service account to impersonate using
       short-term credentials, or chained list of accounts required to get the
       access token of the last account in the list, which will be impersonated
       in the request. If set as a string, the account must grant the
       originating account the Service Account Token Creator IAM role. If set
       as a sequence, the identities from the list must grant Service Account
       Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account. (templated)
   :param labels: a dictionary containing labels for the table, passed to BigQuery.
   :param encryption_configuration: (Optional) Custom encryption configuration (e.g., Cloud KMS keys).

       .. code-block:: python

           encryption_configuration = {
               "kmsKeyName": "projects/PROJECT/locations/LOCATION/keyRings/KEY_RING/cryptoKeys/KEY",
           }
   :param deferrable: Run operator in the deferrable mode.
   :param poll_interval: (Deferrable mode only) polling period in seconds to
       check for the status of job.
   :param query_params: a list of dictionary containing query parameter types and
       values, passed to BigQuery. The structure of dictionary should look like
       'queryParameters' in Google BigQuery Jobs API:
       https://cloud.google.com/bigquery/docs/reference/rest/v2/jobs.
       For example, [{ 'name': 'corpus', 'parameterType': { 'type': 'STRING' },
       'parameterValue': { 'value': 'romeoandjuliet' } }]. (templated)
   :param project_id: Google Cloud Project where the job is running


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('sql', 'gcp_conn_id', 'impersonation_chain', 'labels', 'query_params')



   .. py:attribute:: template_ext
      :type:  collections.abc.Sequence[str]
      :value: ('.sql',)



   .. py:attribute:: ui_color
      :value: '#C0D7FF'



   .. py:attribute:: conn_id_field
      :value: 'gcp_conn_id'



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: use_legacy_sql
      :value: True



   .. py:attribute:: location
      :value: None



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: labels
      :value: None



   .. py:attribute:: encryption_configuration
      :value: None



   .. py:attribute:: deferrable


   .. py:attribute:: poll_interval
      :value: 4.0



   .. py:attribute:: query_params
      :value: None



   .. py:attribute:: project_id
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event)

      Act as a callback for when the trigger fires.

      This returns immediately. It relies on trigger to throw an exception,
      otherwise it assumes execution was successful.



.. py:class:: BigQueryValueCheckOperator(*, sql, pass_value, tolerance = None, encryption_configuration = None, gcp_conn_id = 'google_cloud_default', project_id = PROVIDE_PROJECT_ID, use_legacy_sql = True, location = None, impersonation_chain = None, labels = None, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), poll_interval = 4.0, **kwargs)

   Bases: :py:obj:`_BigQueryDbHookMixin`, :py:obj:`airflow.providers.common.sql.operators.sql.SQLValueCheckOperator`, :py:obj:`_BigQueryOperatorsEncryptionConfigurationMixin`


   Perform a simple value check using sql code.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:BigQueryValueCheckOperator`

   :param sql: SQL to execute.
   :param use_legacy_sql: Whether to use legacy SQL (true)
       or standard SQL (false).
   :param encryption_configuration: (Optional) Custom encryption configuration (e.g., Cloud KMS keys).

       .. code-block:: python

           encryption_configuration = {
               "kmsKeyName": "projects/PROJECT/locations/LOCATION/keyRings/KEY_RING/cryptoKeys/KEY",
           }
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google Cloud.
   :param location: The geographic location of the job. See details at:
       https://cloud.google.com/bigquery/docs/locations#specifying_your_location
   :param impersonation_chain: Optional service account to impersonate using
       short-term credentials, or chained list of accounts required to get the
       access token of the last account in the list, which will be impersonated
       in the request. If set as a string, the account must grant the
       originating account the Service Account Token Creator IAM role. If set
       as a sequence, the identities from the list must grant Service Account
       Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account. (templated)
   :param labels: a dictionary containing labels for the table, passed to BigQuery.
   :param deferrable: Run operator in the deferrable mode.
   :param poll_interval: (Deferrable mode only) polling period in seconds to
       check for the status of job.
   :param project_id: Google Cloud Project where the job is running


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('sql', 'gcp_conn_id', 'pass_value', 'impersonation_chain', 'labels')



   .. py:attribute:: template_ext
      :type:  collections.abc.Sequence[str]
      :value: ('.sql',)



   .. py:attribute:: ui_color
      :value: '#C0D7FF'



   .. py:attribute:: conn_id_field
      :value: 'gcp_conn_id'



   .. py:attribute:: location
      :value: None



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: use_legacy_sql
      :value: True



   .. py:attribute:: encryption_configuration
      :value: None



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: labels
      :value: None



   .. py:attribute:: deferrable


   .. py:attribute:: poll_interval
      :value: 4.0



   .. py:attribute:: project_id
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event)

      Act as a callback for when the trigger fires.

      This returns immediately. It relies on trigger to throw an exception,
      otherwise it assumes execution was successful.



.. py:class:: BigQueryIntervalCheckOperator(*, table, metrics_thresholds, date_filter_column = 'ds', days_back = -7, gcp_conn_id = 'google_cloud_default', use_legacy_sql = True, location = None, encryption_configuration = None, impersonation_chain = None, labels = None, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), poll_interval = 4.0, project_id = PROVIDE_PROJECT_ID, **kwargs)

   Bases: :py:obj:`_BigQueryDbHookMixin`, :py:obj:`airflow.providers.common.sql.operators.sql.SQLIntervalCheckOperator`, :py:obj:`_BigQueryOperatorsEncryptionConfigurationMixin`


   Check that the values of metrics given as SQL expressions are within a tolerance of the older ones.

   This method constructs a query like so ::

       SELECT {metrics_threshold_dict_key} FROM {table}
       WHERE {date_filter_column}=<date>

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:BigQueryIntervalCheckOperator`

   :param table: the table name
   :param days_back: number of days between ds and the ds we want to check
       against. Defaults to 7 days
   :param metrics_thresholds: a dictionary of ratios indexed by metrics, for
       example 'COUNT(*)': 1.5 would require a 50 percent or less difference
       between the current day, and the prior days_back.
   :param use_legacy_sql: Whether to use legacy SQL (true)
       or standard SQL (false).
   :param encryption_configuration: (Optional) Custom encryption configuration (e.g., Cloud KMS keys).

       .. code-block:: python

           encryption_configuration = {
               "kmsKeyName": "projects/PROJECT/locations/LOCATION/keyRings/KEY_RING/cryptoKeys/KEY",
           }
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google Cloud.
   :param location: The geographic location of the job. See details at:
       https://cloud.google.com/bigquery/docs/locations#specifying_your_location
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param labels: a dictionary containing labels for the table, passed to BigQuery
   :param deferrable: Run operator in the deferrable mode
   :param poll_interval: (Deferrable mode only) polling period in seconds to check for the status of job.
       Defaults to 4 seconds.
   :param project_id: a string represents the BigQuery projectId


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('table', 'gcp_conn_id', 'sql1', 'sql2', 'impersonation_chain', 'labels')



   .. py:attribute:: ui_color
      :value: '#C0D7FF'



   .. py:attribute:: conn_id_field
      :value: 'gcp_conn_id'



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: use_legacy_sql
      :value: True



   .. py:attribute:: location
      :value: None



   .. py:attribute:: encryption_configuration
      :value: None



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: labels
      :value: None



   .. py:attribute:: project_id
      :value: None



   .. py:attribute:: deferrable


   .. py:attribute:: poll_interval
      :value: 4.0



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event)

      Act as a callback for when the trigger fires.

      This returns immediately. It relies on trigger to throw an exception,
      otherwise it assumes execution was successful.



.. py:class:: BigQueryColumnCheckOperator(*, table, column_mapping, partition_clause = None, database = None, accept_none = True, encryption_configuration = None, gcp_conn_id = 'google_cloud_default', project_id = PROVIDE_PROJECT_ID, use_legacy_sql = True, location = None, impersonation_chain = None, labels = None, **kwargs)

   Bases: :py:obj:`_BigQueryDbHookMixin`, :py:obj:`airflow.providers.common.sql.operators.sql.SQLColumnCheckOperator`, :py:obj:`_BigQueryOperatorsEncryptionConfigurationMixin`


   Subclasses the SQLColumnCheckOperator in order to provide a job id for OpenLineage to parse.

   See base class docstring for usage.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:BigQueryColumnCheckOperator`

   :param table: the table name
   :param column_mapping: a dictionary relating columns to their checks
   :param partition_clause: a string SQL statement added to a WHERE clause
       to partition data
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google Cloud.
   :param encryption_configuration: (Optional) Custom encryption configuration (e.g., Cloud KMS keys).

       .. code-block:: python

           encryption_configuration = {
               "kmsKeyName": "projects/PROJECT/locations/LOCATION/keyRings/KEY_RING/cryptoKeys/KEY",
           }
   :param use_legacy_sql: Whether to use legacy SQL (true)
       or standard SQL (false).
   :param location: The geographic location of the job. See details at:
       https://cloud.google.com/bigquery/docs/locations#specifying_your_location
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param labels: a dictionary containing labels for the table, passed to BigQuery
   :param project_id: Google Cloud Project where the job is running


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: conn_id_field
      :value: 'gcp_conn_id'



   .. py:attribute:: table


   .. py:attribute:: column_mapping


   .. py:attribute:: partition_clause
      :value: None



   .. py:attribute:: database
      :value: None



   .. py:attribute:: accept_none
      :value: True



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: encryption_configuration
      :value: None



   .. py:attribute:: use_legacy_sql
      :value: True



   .. py:attribute:: location
      :value: None



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: labels
      :value: None



   .. py:attribute:: project_id
      :value: None



   .. py:method:: execute(context=None)

      Perform checks on the given columns.



.. py:class:: BigQueryTableCheckOperator(*, table, checks, partition_clause = None, gcp_conn_id = 'google_cloud_default', project_id = PROVIDE_PROJECT_ID, use_legacy_sql = True, location = None, impersonation_chain = None, labels = None, encryption_configuration = None, **kwargs)

   Bases: :py:obj:`_BigQueryDbHookMixin`, :py:obj:`airflow.providers.common.sql.operators.sql.SQLTableCheckOperator`, :py:obj:`_BigQueryOperatorsEncryptionConfigurationMixin`


   Subclasses the SQLTableCheckOperator in order to provide a job id for OpenLineage to parse.

   See base class for usage.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:BigQueryTableCheckOperator`

   :param table: the table name
   :param checks: a dictionary of check names and boolean SQL statements
   :param partition_clause: a string SQL statement added to a WHERE clause
       to partition data
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google Cloud.
   :param use_legacy_sql: Whether to use legacy SQL (true)
       or standard SQL (false).
   :param location: The geographic location of the job. See details at:
       https://cloud.google.com/bigquery/docs/locations#specifying_your_location
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param labels: a dictionary containing labels for the table, passed to BigQuery
   :param encryption_configuration: (Optional) Custom encryption configuration (e.g., Cloud KMS keys).
   :param project_id: Google Cloud Project where the job is running

       .. code-block:: python

           encryption_configuration = {
               "kmsKeyName": "projects/PROJECT/locations/LOCATION/keyRings/KEY_RING/cryptoKeys/KEY",
           }


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: conn_id_field
      :value: 'gcp_conn_id'



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: use_legacy_sql
      :value: True



   .. py:attribute:: location
      :value: None



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: labels
      :value: None



   .. py:attribute:: encryption_configuration
      :value: None



   .. py:attribute:: project_id
      :value: None



   .. py:method:: execute(context=None)

      Execute the given checks on the table.



.. py:class:: BigQueryGetDataOperator(*, dataset_id = None, table_id = None, table_project_id = None, job_id = None, job_project_id = None, project_id = PROVIDE_PROJECT_ID, max_results = 100, selected_fields = None, gcp_conn_id = 'google_cloud_default', location = None, encryption_configuration = None, impersonation_chain = None, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), poll_interval = 4.0, as_dict = False, use_legacy_sql = True, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`, :py:obj:`_BigQueryOperatorsEncryptionConfigurationMixin`


   Fetch data and return it, either from a BigQuery table, or results of a query job.

   Data could be narrowed down by specific columns or retrieved as a whole.
   It is returned in either of the following two formats, based on "as_dict" value:
   1. False (Default) - A Python list of lists, with the number of nested lists equal to the number of rows
   fetched. Each nested list represents a row, where the elements within it correspond to the column values
   for that particular row.

   **Example Result**: ``[['Tony', 10], ['Mike', 20]``


   2. True - A Python list of dictionaries, where each dictionary represents a row. In each dictionary,
   the keys are the column names and the values are the corresponding values for those columns.

   **Example Result**: ``[{'name': 'Tony', 'age': 10}, {'name': 'Mike', 'age': 20}]``

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:BigQueryGetDataOperator`

   .. note::
       If you pass fields to ``selected_fields`` which are in different order than the
       order of columns already in
       BQ table/job, the data will still be in the order of BQ table.
       For example if the BQ table has 3 columns as
       ``[A,B,C]`` and you pass 'B,A' in the ``selected_fields``
       the data would still be of the form ``'A,B'``.

   .. note::
       When utilizing job id not in deferrable mode, the job should be in DONE state.

   **Example - Retrieve data from BigQuery using table**::

       get_data = BigQueryGetDataOperator(
           task_id="get_data_from_bq",
           dataset_id="test_dataset",
           table_id="Transaction_partitions",
           table_project_id="internal-gcp-project",
           max_results=100,
           selected_fields="DATE",
           gcp_conn_id="airflow-conn-id",
       )

   **Example - Retrieve data from BigQuery using a job id**::

       get_data = BigQueryGetDataOperator(
           job_id="airflow_8999918812727394_86a1cecc69c5e3028d28247affd7563",
           job_project_id="internal-gcp-project",
           max_results=100,
           selected_fields="DATE",
           gcp_conn_id="airflow-conn-id",
       )

   :param dataset_id: The dataset ID of the requested table. (templated)
   :param table_id: The table ID of the requested table. Mutually exclusive with job_id. (templated)
   :param table_project_id: (Optional) The project ID of the requested table.
       If None, it will be derived from the hook's project ID. (templated)
   :param job_id: The job ID from which query results are retrieved.
       Mutually exclusive with table_id. (templated)
   :param job_project_id: (Optional) Google Cloud Project where the job is running.
       If None, it will be derived from the hook's project ID. (templated)
   :param project_id: (Deprecated) (Optional) The name of the project where the data
       will be returned from. If None, it will be derived from the hook's project ID. (templated)
   :param max_results: The maximum number of records (rows) to be fetched
       from the table. (templated)
   :param selected_fields: List of fields to return (comma-separated). If
       unspecified, all fields are returned.
   :param encryption_configuration: (Optional) Custom encryption configuration (e.g., Cloud KMS keys).

       .. code-block:: python

           encryption_configuration = {
               "kmsKeyName": "projects/PROJECT/locations/LOCATION/keyRings/KEY_RING/cryptoKeys/KEY",
           }
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google Cloud.
   :param location: The location used for the operation.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param deferrable: Run operator in the deferrable mode
   :param poll_interval: (Deferrable mode only) polling period in seconds to check for the status of job.
       Defaults to 4 seconds.
   :param as_dict: if True returns the result as a list of dictionaries, otherwise as list of lists
       (default: False).
   :param use_legacy_sql: Whether to use legacy SQL (true) or standard SQL (false).


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('dataset_id', 'table_id', 'table_project_id', 'job_id', 'job_project_id', 'project_id',...



   .. py:attribute:: ui_color
      :value: '#A1BBFF'



   .. py:attribute:: table_project_id
      :value: None



   .. py:attribute:: dataset_id
      :value: None



   .. py:attribute:: table_id
      :value: None



   .. py:attribute:: job_project_id
      :value: None



   .. py:attribute:: job_id
      :value: None



   .. py:attribute:: max_results
      :value: 100



   .. py:attribute:: selected_fields
      :value: None



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: location
      :value: None



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: encryption_configuration
      :value: None



   .. py:attribute:: project_id
      :value: None



   .. py:attribute:: deferrable


   .. py:attribute:: poll_interval
      :value: 4.0



   .. py:attribute:: as_dict
      :value: False



   .. py:attribute:: use_legacy_sql
      :value: True



   .. py:method:: generate_query(hook)

      Generate a SELECT query if for the given dataset and table ID.



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event)

      Act as a callback for when the trigger fires.

      This returns immediately. It relies on trigger to throw an exception,
      otherwise it assumes execution was successful.



.. py:class:: BigQueryCreateTableOperator(*, dataset_id, table_id, table_resource, project_id = PROVIDE_PROJECT_ID, location = None, gcs_schema_object = None, gcp_conn_id = 'google_cloud_default', google_cloud_storage_conn_id = 'google_cloud_default', impersonation_chain = None, if_exists = 'log', retry = DEFAULT, timeout = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Creates a new table in the specified BigQuery dataset, optionally with schema.

   The schema to be used for the BigQuery table may be specified in one of
   two ways. You may either directly pass the schema fields in, or you may
   point the operator to a Google Cloud Storage object name. The object in
   Google Cloud Storage must be a JSON file with the schema fields in it.
   You can also create a table without schema.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:BigQueryCreateTableOperator`

   :param project_id: Optional. The project to create the table into.
   :param dataset_id: Required. The dataset to create the table into.
   :param table_id: Required. The Name of the table to be created.
   :param table_resource: Required. Table resource as described in documentation:
       https://cloud.google.com/bigquery/docs/reference/rest/v2/tables#Table
       If ``table`` is a reference, an empty table is created with the specified ID. The dataset that
       the table belongs to must already exist.
   :param if_exists: Optional. What should Airflow do if the table exists. If set to `log`,
       the TI will be passed to success and an error message will be logged. Set to `ignore` to ignore
       the error, set to `fail` to fail the TI, and set to `skip` to skip it.
   :param gcs_schema_object: Optional. Full path to the JSON file containing schema. For
       example: ``gs://test-bucket/dir1/dir2/employee_schema.json``
   :param gcp_conn_id: Optional. The connection ID used to connect to Google Cloud and
       interact with the Bigquery service.
   :param google_cloud_storage_conn_id: Optional. The connection ID used to connect to Google Cloud.
       and interact with the Google Cloud Storage service.
   :param location: Optional. The location used for the operation.
   :param retry: Optional. A retry object used  to retry requests. If `None` is specified, requests
           will not be retried.
   :param timeout: Optional. The amount of time, in seconds, to wait for the request to complete.
       Note that if `retry` is specified, the timeout applies to each individual attempt.
   :param impersonation_chain: Optional. Service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('dataset_id', 'table_id', 'table_resource', 'project_id', 'gcs_schema_object', 'gcp_conn_id',...



   .. py:attribute:: template_fields_renderers


   .. py:attribute:: ui_color
      :value: '#81A0FF'



   .. py:attribute:: operator_extra_links


   .. py:attribute:: project_id
      :value: None



   .. py:attribute:: location
      :value: None



   .. py:attribute:: dataset_id


   .. py:attribute:: table_id


   .. py:attribute:: table_resource


   .. py:attribute:: if_exists


   .. py:attribute:: gcs_schema_object
      :value: None



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: google_cloud_storage_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: retry


   .. py:attribute:: timeout
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: get_openlineage_facets_on_complete(_)

      Implement _on_complete as we will use table resource returned by create method.



.. py:class:: BigQueryDeleteDatasetOperator(*, dataset_id, project_id = PROVIDE_PROJECT_ID, delete_contents = False, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Delete an existing dataset from your Project in BigQuery.

   https://cloud.google.com/bigquery/docs/reference/rest/v2/datasets/delete

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:BigQueryDeleteDatasetOperator`

   :param project_id: The project id of the dataset.
   :param dataset_id: The dataset to be deleted.
   :param delete_contents: (Optional) Whether to force the deletion even if the dataset is not empty.
       Will delete all tables (if any) in the dataset if set to True.
       Will raise HttpError 400: "{dataset_id} is still in use" if set to False and dataset is not empty.
       The default value is False.
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).

   **Example**::

       delete_temp_data = BigQueryDeleteDatasetOperator(
           dataset_id="temp-dataset",
           project_id="temp-project",
           delete_contents=True,  # Force the deletion of the dataset as well as its tables (if any).
           gcp_conn_id="_my_gcp_conn_",
           task_id="Deletetemp",
           dag=dag,
       )


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('dataset_id', 'project_id', 'gcp_conn_id', 'impersonation_chain')



   .. py:attribute:: ui_color
      :value: '#5F86FF'



   .. py:attribute:: dataset_id


   .. py:attribute:: project_id
      :value: None



   .. py:attribute:: delete_contents
      :value: False



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: BigQueryCreateEmptyDatasetOperator(*, dataset_id = None, project_id = PROVIDE_PROJECT_ID, dataset_reference = None, location = None, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, if_exists = 'log', exists_ok = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Create a new dataset for your Project in BigQuery.

   https://cloud.google.com/bigquery/docs/reference/rest/v2/datasets#resource

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:BigQueryCreateEmptyDatasetOperator`

   :param project_id: The name of the project where we want to create the dataset.
   :param dataset_id: The id of dataset. Don't need to provide, if datasetId in dataset_reference.
   :param location: The geographic location where the dataset should reside.
   :param dataset_reference: Dataset reference that could be provided with request body.
       More info:
       https://cloud.google.com/bigquery/docs/reference/rest/v2/datasets#resource
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param if_exists: What should Airflow do if the dataset exists. If set to `log`, the TI will be passed to
       success and an error message will be logged. Set to `ignore` to ignore the error, set to `fail` to
       fail the TI, and set to `skip` to skip it.
       **Example**::

           create_new_dataset = BigQueryCreateEmptyDatasetOperator(
               dataset_id='new-dataset',
               project_id='my-project',
               dataset_reference={"friendlyName": "New Dataset"},
               gcp_conn_id='_my_gcp_conn_',
               task_id='newDatasetCreator',
               dag=dag)
   :param exists_ok: Deprecated - use `if_exists="ignore"` instead.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('dataset_id', 'project_id', 'dataset_reference', 'gcp_conn_id', 'impersonation_chain')



   .. py:attribute:: template_fields_renderers


   .. py:attribute:: ui_color
      :value: '#5F86FF'



   .. py:attribute:: operator_extra_links


   .. py:attribute:: dataset_id
      :value: None



   .. py:attribute:: project_id
      :value: None



   .. py:attribute:: location
      :value: None



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: dataset_reference


   .. py:attribute:: impersonation_chain
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: BigQueryGetDatasetOperator(*, dataset_id, project_id = PROVIDE_PROJECT_ID, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Get the dataset specified by ID.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:BigQueryGetDatasetOperator`

   :param dataset_id: The id of dataset. Don't need to provide,
       if datasetId in dataset_reference.
   :param project_id: The name of the project where we want to create the dataset.
       Don't need to provide, if projectId in dataset_reference.
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('dataset_id', 'project_id', 'gcp_conn_id', 'impersonation_chain')



   .. py:attribute:: ui_color
      :value: '#5F86FF'



   .. py:attribute:: operator_extra_links


   .. py:attribute:: dataset_id


   .. py:attribute:: project_id
      :value: None



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: BigQueryGetDatasetTablesOperator(*, dataset_id, project_id = PROVIDE_PROJECT_ID, max_results = None, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Retrieve the list of tables in the specified dataset.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:BigQueryGetDatasetTablesOperator`

   :param dataset_id: the dataset ID of the requested dataset.
   :param project_id: (Optional) the project of the requested dataset. If None,
       self.project_id will be used.
   :param max_results: (Optional) the maximum number of tables to return.
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('dataset_id', 'project_id', 'gcp_conn_id', 'impersonation_chain')



   .. py:attribute:: ui_color
      :value: '#5F86FF'



   .. py:attribute:: dataset_id


   .. py:attribute:: project_id
      :value: None



   .. py:attribute:: max_results
      :value: None



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: BigQueryUpdateTableOperator(*, table_resource, fields = None, dataset_id = None, table_id = None, project_id = PROVIDE_PROJECT_ID, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Update a table for your Project in BigQuery.

   Use ``fields`` to specify which fields of table to update. If a field
   is listed in ``fields`` and is ``None`` in table, it will be deleted.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:BigQueryUpdateTableOperator`

   :param dataset_id: The id of dataset. Don't need to provide,
       if datasetId in table_reference.
   :param table_id: The id of table. Don't need to provide,
       if tableId in table_reference.
   :param table_resource: Dataset resource that will be provided with request body.
       https://cloud.google.com/bigquery/docs/reference/rest/v2/tables#resource
   :param fields: The fields of ``table`` to change, spelled as the Table
       properties (e.g. "friendly_name").
   :param project_id: The name of the project where we want to create the table.
       Don't need to provide, if projectId in table_reference.
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('dataset_id', 'table_id', 'project_id', 'gcp_conn_id', 'impersonation_chain')



   .. py:attribute:: template_fields_renderers


   .. py:attribute:: ui_color
      :value: '#81A0FF'



   .. py:attribute:: operator_extra_links


   .. py:attribute:: dataset_id
      :value: None



   .. py:attribute:: table_id
      :value: None



   .. py:attribute:: project_id
      :value: None



   .. py:attribute:: fields
      :value: None



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: table_resource


   .. py:attribute:: impersonation_chain
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: get_openlineage_facets_on_complete(_)

      Implement _on_complete as we will use table resource returned by update method.



.. py:class:: BigQueryUpdateDatasetOperator(*, dataset_resource, fields = None, dataset_id = None, project_id = PROVIDE_PROJECT_ID, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Update a dataset for your Project in BigQuery.

   Use ``fields`` to specify which fields of dataset to update. If a field
   is listed in ``fields`` and is ``None`` in dataset, it will be deleted.
   If no ``fields`` are provided then all fields of provided ``dataset_resource``
   will be used.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:BigQueryUpdateDatasetOperator`

   :param dataset_id: The id of dataset. Don't need to provide,
       if datasetId in dataset_reference.
   :param dataset_resource: Dataset resource that will be provided with request body.
       https://cloud.google.com/bigquery/docs/reference/rest/v2/datasets#resource
   :param fields: The properties of dataset to change (e.g. "friendly_name").
   :param project_id: The name of the project where we want to create the dataset.
       Don't need to provide, if projectId in dataset_reference.
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('dataset_id', 'project_id', 'gcp_conn_id', 'impersonation_chain')



   .. py:attribute:: template_fields_renderers


   .. py:attribute:: ui_color
      :value: '#5F86FF'



   .. py:attribute:: operator_extra_links


   .. py:attribute:: dataset_id
      :value: None



   .. py:attribute:: project_id
      :value: None



   .. py:attribute:: fields
      :value: None



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: dataset_resource


   .. py:attribute:: impersonation_chain
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: BigQueryDeleteTableOperator(*, deletion_dataset_table, gcp_conn_id = 'google_cloud_default', ignore_if_missing = False, location = None, impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Delete a BigQuery table.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:BigQueryDeleteTableOperator`

   :param deletion_dataset_table: A dotted
       ``(<project>.|<project>:)<dataset>.<table>`` that indicates which table
       will be deleted. (templated)
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google Cloud.
   :param ignore_if_missing: if True, then return success even if the
       requested table does not exist.
   :param location: The location used for the operation.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('deletion_dataset_table', 'gcp_conn_id', 'impersonation_chain')



   .. py:attribute:: ui_color
      :value: '#81A0FF'



   .. py:attribute:: deletion_dataset_table


   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: ignore_if_missing
      :value: False



   .. py:attribute:: location
      :value: None



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: hook
      :type:  airflow.providers.google.cloud.hooks.bigquery.BigQueryHook | None
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: get_openlineage_facets_on_complete(_)

      Implement _on_complete as we need default project_id from hook.



.. py:class:: BigQueryUpsertTableOperator(*, dataset_id, table_resource, project_id = PROVIDE_PROJECT_ID, gcp_conn_id = 'google_cloud_default', location = None, impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Upsert to a BigQuery table.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:BigQueryUpsertTableOperator`

   :param dataset_id: A dotted
       ``(<project>.|<project>:)<dataset>`` that indicates which dataset
       will be updated. (templated)
   :param table_resource: a table resource. see
       https://cloud.google.com/bigquery/docs/reference/v2/tables#resource
   :param project_id: The name of the project where we want to update the dataset.
       Don't need to provide, if projectId in dataset_reference.
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google Cloud.
   :param location: The location used for the operation.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('dataset_id', 'table_resource', 'gcp_conn_id', 'impersonation_chain', 'project_id')



   .. py:attribute:: template_fields_renderers


   .. py:attribute:: ui_color
      :value: '#81A0FF'



   .. py:attribute:: operator_extra_links


   .. py:attribute:: dataset_id


   .. py:attribute:: table_resource


   .. py:attribute:: project_id
      :value: None



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: location
      :value: None



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: get_openlineage_facets_on_complete(_)

      Implement _on_complete as we will use table resource returned by upsert method.



.. py:class:: BigQueryUpdateTableSchemaOperator(*, schema_fields_updates, dataset_id, table_id, include_policy_tags = False, project_id = PROVIDE_PROJECT_ID, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, location = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Update BigQuery Table Schema.

   Updates fields on a table schema based on contents of the supplied schema_fields_updates
   parameter. The supplied schema does not need to be complete, if the field
   already exists in the schema you only need to supply keys & values for the
   items you want to patch, just ensure the "name" key is set.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:BigQueryUpdateTableSchemaOperator`

   :param schema_fields_updates: a partial schema resource. see
       https://cloud.google.com/bigquery/docs/reference/rest/v2/tables#TableSchema

       .. code-block:: python

           schema_fields_updates = [
               {"name": "emp_name", "description": "Some New Description"},
               {
                   "name": "salary",
                   "policyTags": {"names": ["some_new_policy_tag"]},
               },
               {
                   "name": "departments",
                   "fields": [
                       {"name": "name", "description": "Some New Description"},
                       {"name": "type", "description": "Some New Description"},
                   ],
               },
           ]

   :param include_policy_tags: (Optional) If set to True policy tags will be included in
       the update request which requires special permissions even if unchanged (default False)
       see https://cloud.google.com/bigquery/docs/column-level-security#roles
   :param dataset_id: A dotted
       ``(<project>.|<project>:)<dataset>`` that indicates which dataset
       will be updated. (templated)
   :param table_id: The table ID of the requested table. (templated)
   :param project_id: The name of the project where we want to update the dataset.
       Don't need to provide, if projectId in dataset_reference.
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google Cloud.
   :param location: The location used for the operation.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('schema_fields_updates', 'dataset_id', 'table_id', 'project_id', 'gcp_conn_id', 'impersonation_chain')



   .. py:attribute:: template_fields_renderers


   .. py:attribute:: ui_color
      :value: '#81A0FF'



   .. py:attribute:: operator_extra_links


   .. py:attribute:: schema_fields_updates


   .. py:attribute:: include_policy_tags
      :value: False



   .. py:attribute:: table_id


   .. py:attribute:: dataset_id


   .. py:attribute:: project_id
      :value: None



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: location
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: get_openlineage_facets_on_complete(_)

      Implement _on_complete as we will use table resource returned by update method.



.. py:class:: BigQueryInsertJobOperator(configuration, project_id = PROVIDE_PROJECT_ID, location = None, job_id = None, force_rerun = True, reattach_states = None, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, cancel_on_kill = True, result_retry = DEFAULT_RETRY, result_timeout = None, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), poll_interval = 4.0, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`, :py:obj:`airflow.providers.google.cloud.openlineage.mixins._BigQueryInsertJobOperatorOpenLineageMixin`


   Execute a BigQuery job.

   Waits for the job to complete and returns job id.
   This operator work in the following way:

   - it calculates a unique hash of the job using job's configuration or uuid if ``force_rerun`` is True
   - creates ``job_id`` in form of
       ``[provided_job_id | airflow_{dag_id}_{task_id}_{exec_date}]_{uniqueness_suffix}``
   - submits a BigQuery job using the ``job_id``
   - if job with given id already exists then it tries to reattach to the job if its not done and its
       state is in ``reattach_states``. If the job is done the operator will raise ``AirflowException``.

   Using ``force_rerun`` will submit a new job every time without attaching to already existing ones.

   For job definition see here:

       https://cloud.google.com/bigquery/docs/reference/v2/jobs

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:BigQueryInsertJobOperator`


   :param configuration: The configuration parameter maps directly to BigQuery's
       configuration field in the job object. For more details see
       https://cloud.google.com/bigquery/docs/reference/rest/v2/Job#jobconfiguration
   :param job_id: The ID of the job. It will be suffixed with hash of job configuration
       unless ``force_rerun`` is True.
       The ID must contain only letters (a-z, A-Z), numbers (0-9), underscores (_), or
       dashes (-). The maximum length is 1,024 characters. If not provided then uuid will
       be generated.
   :param force_rerun: If True then operator will use hash of uuid as job id suffix
   :param reattach_states: Set of BigQuery job's states in case of which we should reattach
       to the job. Should be other than final states.
   :param project_id: Google Cloud Project where the job is running
   :param location: location the job is running
   :param gcp_conn_id: The connection ID used to connect to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param cancel_on_kill: Flag which indicates whether cancel the hook's job or not, when on_kill is called
   :param result_retry: How to retry the `result` call that retrieves rows
   :param result_timeout: The number of seconds to wait for `result` method before using `result_retry`
   :param deferrable: Run operator in the deferrable mode
   :param poll_interval: (Deferrable mode only) polling period in seconds to check for the status of job.
       Defaults to 4 seconds.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('configuration', 'job_id', 'gcp_conn_id', 'impersonation_chain', 'project_id')



   .. py:attribute:: template_ext
      :type:  collections.abc.Sequence[str]
      :value: ('.json', '.sql')



   .. py:attribute:: template_fields_renderers


   .. py:attribute:: ui_color
      :value: '#A1BBFF'



   .. py:attribute:: operator_extra_links


   .. py:attribute:: configuration


   .. py:attribute:: location
      :value: None



   .. py:attribute:: job_id
      :value: None



   .. py:attribute:: project_id
      :value: None



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: force_rerun
      :value: True



   .. py:attribute:: reattach_states
      :type:  set[str]


   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: cancel_on_kill
      :value: True



   .. py:attribute:: result_retry


   .. py:attribute:: result_timeout
      :value: None



   .. py:attribute:: hook
      :type:  airflow.providers.google.cloud.hooks.bigquery.BigQueryHook | None
      :value: None



   .. py:attribute:: deferrable


   .. py:attribute:: poll_interval
      :value: 4.0



   .. py:property:: sql
      :type: str | None



   .. py:method:: prepare_template()

      Execute after the templated fields get replaced by their content.

      If you need your object to alter the content of the file before the
      template is rendered, it should override this method to do so.



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event)

      Act as a callback for when the trigger fires.

      This returns immediately. It relies on trigger to throw an exception,
      otherwise it assumes execution was successful.



   .. py:method:: on_kill()

      Override this method to clean up subprocesses when a task instance gets killed.

      Any use of the threading, subprocess or multiprocessing module within an
      operator needs to be cleaned up, or it will leave ghost processes behind.



.. py:class:: BigQueryCreateRoutineOperator(*, dataset_id, routine_id, routine_resource = None, project_id = PROVIDE_PROJECT_ID, routine_type = None, language = None, definition_body = None, arguments = None, return_type = None, return_table_type = None, imported_libraries = None, determinism_level = None, security_mode = None, data_governance_type = None, description = None, remote_function_options = None, spark_options = None, if_exists = 'fail', gcp_conn_id = 'google_cloud_default', location = None, impersonation_chain = None, retry = DEFAULT_RETRY, timeout = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Create a BigQuery routine (UDF, stored procedure, table-valued function, or aggregate).

   The routine is defined by a ``Routine`` resource as documented at
   https://cloud.google.com/bigquery/docs/reference/rest/v2/routines#Routine. The full resource
   may be passed via ``routine_resource``, or individual fields can be passed as keyword
   arguments, which are merged into ``routine_resource`` at execute time.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:BigQueryCreateRoutineOperator`

   :param dataset_id: The dataset that will own the routine.
   :param routine_id: The identifier of the routine to create.
   :param routine_resource: The routine resource as a dict or
       :class:`~google.cloud.bigquery.routine.Routine`. If omitted, the resource is assembled
       from the individual keyword arguments below.
   :param project_id: Optional. The project that owns the dataset. Falls back to the connection's
       default.
   :param routine_type: Optional. One of ``"SCALAR_FUNCTION"``, ``"PROCEDURE"``,
       ``"TABLE_VALUED_FUNCTION"``, ``"AGGREGATE_FUNCTION"``.
   :param language: Optional. ``"SQL"`` or ``"JAVASCRIPT"``.
   :param definition_body: Optional. The body of the routine (SQL or JavaScript).
   :param arguments: Optional. Sequence of argument dicts in the Google API representation
       (see the ``Routine.Argument`` schema).
   :param return_type: Optional. The return type of the routine as a ``StandardSqlDataType``
       dict.
   :param return_table_type: Optional. The return table type for table-valued functions as a
       ``StandardSqlTableType`` dict.
   :param imported_libraries: Optional. URIs of Cloud Storage libraries to import (JavaScript
       UDFs only).
   :param determinism_level: Optional. Determinism level for the routine.
   :param security_mode: Optional. Security mode (``"DEFINER"`` or ``"INVOKER"``).
   :param data_governance_type: Optional. Data governance type for the routine.
   :param description: Optional. Description of the routine.
   :param remote_function_options: Optional. Options for remote functions.
   :param spark_options: Optional. Options for Spark stored procedures.
   :param if_exists: What to do if a routine with the same identifier already exists.
       ``"fail"`` (default) raises, ``"skip"`` returns the existing routine, ``"replace"``
       deletes the existing routine and creates the new one.
   :param gcp_conn_id: The connection ID used to connect to Google Cloud.
   :param location: The location of the BigQuery dataset.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts.
   :param retry: A retry object used to retry requests.
   :param timeout: The amount of time, in seconds, to wait for the request.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('project_id', 'dataset_id', 'routine_id', 'definition_body', 'arguments', 'routine_resource',...



   .. py:attribute:: template_fields_renderers


   .. py:attribute:: template_ext
      :type:  collections.abc.Sequence[str]
      :value: ('.sql',)



   .. py:attribute:: ui_color
      :value: '#81A0FF'



   .. py:attribute:: project_id
      :value: None



   .. py:attribute:: dataset_id


   .. py:attribute:: routine_id


   .. py:attribute:: routine_resource
      :value: None



   .. py:attribute:: routine_type
      :value: None



   .. py:attribute:: language
      :value: None



   .. py:attribute:: definition_body
      :value: None



   .. py:attribute:: arguments
      :value: None



   .. py:attribute:: return_type
      :value: None



   .. py:attribute:: return_table_type
      :value: None



   .. py:attribute:: imported_libraries
      :value: None



   .. py:attribute:: determinism_level
      :value: None



   .. py:attribute:: security_mode
      :value: None



   .. py:attribute:: data_governance_type
      :value: None



   .. py:attribute:: description
      :value: None



   .. py:attribute:: remote_function_options
      :value: None



   .. py:attribute:: spark_options
      :value: None



   .. py:attribute:: if_exists
      :value: 'fail'



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: location
      :value: None



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: retry


   .. py:attribute:: timeout
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: BigQueryUpdateRoutineOperator(*, dataset_id, routine_id, routine_resource, fields, project_id = PROVIDE_PROJECT_ID, gcp_conn_id = 'google_cloud_default', location = None, impersonation_chain = None, retry = DEFAULT_RETRY, timeout = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Patch selected fields of an existing BigQuery routine.

   Only the fields listed in ``fields`` are updated. Any field listed but left unset in
   ``routine_resource`` is cleared on the server.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:BigQueryUpdateRoutineOperator`

   :param dataset_id: The dataset that owns the routine.
   :param routine_id: The identifier of the routine to update.
   :param routine_resource: The routine resource (dict or
       :class:`~google.cloud.bigquery.routine.Routine`) with the new values for the fields
       listed in ``fields``.
   :param fields: Properties to update (e.g. ``["definitionBody", "description"]``).
   :param project_id: Optional. The project that owns the dataset.
   :param gcp_conn_id: The connection ID used to connect to Google Cloud.
   :param location: The location of the BigQuery dataset.
   :param impersonation_chain: Optional service account to impersonate.
   :param retry: A retry object used to retry requests.
   :param timeout: The amount of time, in seconds, to wait for the request.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('project_id', 'dataset_id', 'routine_id', 'routine_resource', 'gcp_conn_id', 'impersonation_chain')



   .. py:attribute:: template_fields_renderers


   .. py:attribute:: template_ext
      :type:  collections.abc.Sequence[str]
      :value: ('.json', '.sql')



   .. py:attribute:: ui_color
      :value: '#81A0FF'



   .. py:attribute:: project_id
      :value: None



   .. py:attribute:: dataset_id


   .. py:attribute:: routine_id


   .. py:attribute:: routine_resource


   .. py:attribute:: fields


   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: location
      :value: None



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: retry


   .. py:attribute:: timeout
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: BigQueryDeleteRoutineOperator(*, dataset_id, routine_id, project_id = PROVIDE_PROJECT_ID, ignore_if_missing = False, gcp_conn_id = 'google_cloud_default', location = None, impersonation_chain = None, retry = DEFAULT_RETRY, timeout = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Delete a BigQuery routine.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:BigQueryDeleteRoutineOperator`

   :param dataset_id: The dataset that owns the routine.
   :param routine_id: The identifier of the routine to delete.
   :param project_id: Optional. The project that owns the dataset.
   :param ignore_if_missing: If ``True``, do not fail when the routine does not exist.
       Defaults to ``False``.
   :param gcp_conn_id: The connection ID used to connect to Google Cloud.
   :param location: The location of the BigQuery dataset.
   :param impersonation_chain: Optional service account to impersonate.
   :param retry: A retry object used to retry requests.
   :param timeout: The amount of time, in seconds, to wait for the request.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('project_id', 'dataset_id', 'routine_id', 'gcp_conn_id', 'impersonation_chain')



   .. py:attribute:: ui_color
      :value: '#81A0FF'



   .. py:attribute:: project_id
      :value: None



   .. py:attribute:: dataset_id


   .. py:attribute:: routine_id


   .. py:attribute:: ignore_if_missing
      :value: False



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: location
      :value: None



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: retry


   .. py:attribute:: timeout
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: BigQueryGetRoutineOperator(*, dataset_id, routine_id, project_id = PROVIDE_PROJECT_ID, gcp_conn_id = 'google_cloud_default', location = None, impersonation_chain = None, retry = DEFAULT_RETRY, timeout = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Fetch an existing BigQuery routine and return its serialized API representation via XCom.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:BigQueryGetRoutineOperator`

   :param dataset_id: The dataset that owns the routine.
   :param routine_id: The identifier of the routine to fetch.
   :param project_id: Optional. The project that owns the dataset.
   :param gcp_conn_id: The connection ID used to connect to Google Cloud.
   :param location: The location of the BigQuery dataset.
   :param impersonation_chain: Optional service account to impersonate.
   :param retry: A retry object used to retry requests.
   :param timeout: The amount of time, in seconds, to wait for the request.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('project_id', 'dataset_id', 'routine_id', 'gcp_conn_id', 'impersonation_chain')



   .. py:attribute:: ui_color
      :value: '#81A0FF'



   .. py:attribute:: project_id
      :value: None



   .. py:attribute:: dataset_id


   .. py:attribute:: routine_id


   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: location
      :value: None



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: retry


   .. py:attribute:: timeout
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: BigQueryListRoutinesOperator(*, dataset_id, project_id = PROVIDE_PROJECT_ID, max_results = None, page_token = None, gcp_conn_id = 'google_cloud_default', location = None, impersonation_chain = None, retry = DEFAULT_RETRY, timeout = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   List routines in a BigQuery dataset and return them as a list via XCom.

   The returned items are API representations. Only a subset of routine fields is populated
   on list responses; fetch individual routines with :class:`BigQueryGetRoutineOperator` for
   the complete resource.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:BigQueryListRoutinesOperator`

   :param dataset_id: The dataset to list routines for.
   :param project_id: Optional. The project that owns the dataset.
   :param max_results: Optional. Maximum number of routines to return.
   :param page_token: Optional. Token identifying a page of results to return.
   :param gcp_conn_id: The connection ID used to connect to Google Cloud.
   :param location: The location of the BigQuery dataset.
   :param impersonation_chain: Optional service account to impersonate.
   :param retry: A retry object used to retry requests.
   :param timeout: The amount of time, in seconds, to wait for the request.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('project_id', 'dataset_id', 'gcp_conn_id', 'impersonation_chain')



   .. py:attribute:: ui_color
      :value: '#81A0FF'



   .. py:attribute:: project_id
      :value: None



   .. py:attribute:: dataset_id


   .. py:attribute:: max_results
      :value: None



   .. py:attribute:: page_token
      :value: None



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: location
      :value: None



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: retry


   .. py:attribute:: timeout
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



